--- a/main_app/templates/finches/index.html
+++ b/main_app/templates/finches/index.html
@@ -6,14 +6,8 @@
 {% for finch in finches %}
   <div class="card">
     <div class="card-content">
-      <span class="card-title">{{ finch.name }}</span>
-      <p>Breed: {{ finch.breed }}</p>
+      <span class="card-title">{{ finch.name }} ({{ finch.scientific_name}} )</span>
       <p>Description: {{ finch.description }}</p>
-      {% if finch.age > 0 %}
-        <p>Age: {{ finch.age }}</p>
-      {% else %}
-        <p>Age: Kitten</p>
-      {% endif %}
     </div>
   </div>
 {% endfor %}
