--- a/main_app/templates/finches/detail.html
+++ b/main_app/templates/finches/detail.html
@@ -1,17 +1,13 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h1>Finch List</h1>
+<h1> Finch Details </h1>
 
-{% for finch in finches %}
-<a href="{% url 'detail' finch.id %}">
-  <div class="card">
+<div class="card">
     <div class="card-content">
       <span class="card-title">{{ finch.name }} ({{ finch.scientific_name}} )</span>
       <p>Description: {{ finch.description }}</p>
     </div>
   </div>
-</a>
-{% endfor %}
 
 {% endblock %}
