--- a/main_app/templates/finches/detail.html
+++ b/main_app/templates/finches/detail.html
@@ -2,16 +2,34 @@
 {% block content %}
 
 <h1> Finch Details </h1>
-
-<div class="card">
-    <div class="card-content">
-      <span class="card-title">{{ finch.name }} ({{ finch.scientific_name}} )</span>
-      <p>Description: {{ finch.description }}</p>
-    </div>
-    <div class="card-action">
-      <a href="{% url 'finches_update' finch.id %}">Edit</a>
-      <a href="{% url 'finches_delete' finch.id %}">Delete</a>
+<div class="row">
+  <div class="col s6">
+    <div class="card">
+      <div class="card-content">
+        <span class="card-title">{{ finch.name }} ({{ finch.scientific_name}} )</span>
+        <p>Description: {{ finch.description }}</p>
+      </div>
+      <div class="card-action">
+        <a href="{% url 'finches_update' finch.id %}">Edit</a>
+        <a href="{% url 'finches_delete' finch.id %}">Delete</a>
+      </div>
     </div>
   </div>
+  <div class="col s6">
+    <table class="striped">
+      <thead>
+        <tr><th>Date</th><th>Meal</th></tr>
+      </thead>
+      <tbody>
+        {% for feeding in finch.feeding_set.all %}
+          <tr>
+            <td>{{feeding.date}}</td>
+            <td>{{feeding.get_meal_display}}</td>
+          </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+  </div>
+</div>
 
 {% endblock %}
