--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -22,6 +22,8 @@
           <li><a href="{% url 'about' %}">About</a></li>
           <li><a href="{% url 'finches_create' %}">Add a New Finch</a></li>
           <li><a href="{% url 'index' %}">View All My Finches</a></li>
+          <li><a href="{% url 'sponsors_list' %}">View All Sponsors</a></li>
+          <li><a href="{% url 'sponsors_create' %}">Make a donation and become a Sponsor!</a></li>
         </ul>
       </div>
     </nav>
