small word change

--- a/main_app/templates/finches/detail.html
+++ b/main_app/templates/finches/detail.html
@@ -57,7 +57,7 @@
         </div>
       {% endfor %}
     {% else %}
-      <h5>{{finch.name}} doesn't have any sponsors, consider becoming its first or donating on behalf of another sponsor below!</h5>
+      <h5>{{finch.name}} doesn't have any sponsors, consider becoming its first or donating on behalf of another sponsor!</h5>
     {% endif %}
   </div>
   <div class="col s6">
